updates to block 3

--- a/index.Rmd
+++ b/index.Rmd
@@ -96,9 +96,13 @@ Alison
 
 ## Links
 
++ [RStudio Cloud workspace](http://bit.ly/tmv-rmed2020)
 
+### Slides
 
-+ [Slides](TBD)
++ [01: Build a model](/slides/rmed01-model.html)
++ [02: Build better models](/slides/rmed02-workflows.html)
++ [03: Tune tree-based models](/slides/rmed03-tune-trees.html)
 
 ## Workshops
 
