--- a/materials/rmed-solutions/03-tune.Rmd
+++ b/materials/rmed-solutions/03-tune.Rmd
@@ -28,12 +28,71 @@ print("Hey there, R/Medicine 2020 all-star!")
 
 # Your Turn 1
 
-Create a new model spec called `rf_mod`, which will learn an ensemble of classification trees from our training data using the **ranger** package. 
+Fill in the blanks to return the accuracy and ROC AUC for this model using 10-fold cross-validation.
 
-Compare the metrics of the random forest to your two single tree models (vanilla and big)- which predicts the test set better?
+```{r}
+tree_mod <- 
+  decision_tree() %>% 
+  set_engine(engine = "rpart") %>% 
+  set_mode("classification")
 
-*Hint: you'll need https://tidymodels.github.io/parsnip/articles/articles/Models.html*
+tree_wf <-
+  workflows() %>% 
+  add_formula(Class ~ .) %>% 
+  add_model(tree_mod)
 
+set.seed(100)
+______ %>% 
+  ______(resamples = alz_folds) %>% 
+  ______
+```
+
+Answer:
+```{r}
+tree_mod <- 
+  decision_tree() %>% 
+  set_engine(engine = "rpart") %>% 
+  set_mode("classification")
+
+tree_wf <-
+  workflow() %>% 
+  add_formula(Class ~ .) %>% 
+  add_model(tree_mod)
+
+set.seed(100)
+tree_wf %>% 
+  fit_resamples(resamples = alz_folds) %>% 
+  collect_metrics()
+```
+
+# Your Turn 2
+
+Create a new parsnip model called `rf_mod`, which will learn an ensemble of classification trees from our training data using the **ranger** package. Update your `tree_wf` with this new model.
+
+Fit your workflow with 10-fold cross-validation and compare the ROC AUC of the random forest to your single decision tree model --- which predicts the test set better?
+
+*Hint: you'll need https://www.tidymodels.org/find/parsnip/*
+
+```{r}
+# model
+rf_mod <-
+  _____ %>% 
+  _____("ranger") %>% 
+  _____("classification")
+
+# workflow
+rf_wf <-
+  tree_wf %>% 
+  update_model(_____)
+
+# fit with cross-validation
+set.seed(100)
+_____ %>% 
+  fit_resamples(resamples = alz_folds) %>% 
+  collect_metrics()
+```
+
+Answer:
 ```{r}
 # model
 rf_mod <-
@@ -43,79 +102,73 @@ rf_mod <-
 
 # workflow
 rf_wf <-
-  workflow() %>% 
-    add_recipe(alz_rec) %>% 
-    add_model(rf_mod)
+  tree_wf %>% 
+  update_model(rf_mod)
 
+# fit with cross-validation
 set.seed(100)
 rf_wf %>% 
   fit_resamples(resamples = alz_folds) %>% 
   collect_metrics()
 ```
 
-# Your Turn 2
-
-Challenge: Make 3 more random forest model specs, each using 1, 20, and 100 variables at each split. Which value maximizes the area under the ROC curve?
-
-*Hint: you'll need https://tidymodels.github.io/parsnip/reference/rand_forest.html*
-
-```{r}
-# model
-rf1_mod <-
-  rand_forest(mtry = 1) %>% 
-  set_engine("ranger") %>% 
-  set_mode("classification")
-
-# workflow
-rf1_wf <-
-  rf_wf %>% 
-    update_model(rf1_mod)
-
-set.seed(100)
-rf1_wf %>% 
-  fit_resamples(resamples = alz_folds) %>% 
-  collect_metrics()
-```
-
-
-```{r}
-# model
-rf20_mod <-
-  rand_forest(mtry = 20) %>% 
-  set_engine("ranger") %>% 
-  set_mode("classification")
-
-# workflow
-rf20_wf <-
-  rf_wf %>% 
-    update_model(rf20_mod)
-
-set.seed(100)
-rf20_wf %>% 
-  fit_resamples(resamples = alz_folds) %>% 
-  collect_metrics()
-```
-
-```{r}
-# model
-rf100_mod <-
-  rand_forest(mtry = 100) %>% 
-  set_engine("ranger") %>% 
-  set_mode("classification")
-
-# workflow
-rf100_wf <-
-  rf_wf %>% 
-    update_model(rf100_mod)
-
-set.seed(100)
-rf100_wf %>% 
-  fit_resamples(resamples = alz_folds) %>% 
-  collect_metrics()
-```
-
-
 # Your Turn 3
+
+Challenge: Fit 3 more random forest models, each using 3, 8, and 30 variables at each split. Update your `rf_wf` with each new model. Which value maximizes the area under the ROC curve?
+
+```{r}
+rf3_mod <- rf_mod %>% 
+  set_args(mtry = 3) 
+
+rf8_mod <- rf_mod %>% 
+  set_args(mtry = 8) 
+
+rf30_mod <- rf_mod %>% 
+  set_args(mtry = 30) 
+```
+
+Do this for each model above:
+```{r}
+_____ <- rf_wf %>% 
+  update_model(_____)
+
+set.seed(100)
+_____ %>% 
+  fit_resamples(resamples = alz_folds) %>% 
+  collect_metrics()
+```
+
+Answer:
+```{r}
+# first one!
+rf3_wf <- rf_wf %>% 
+  update_model(rf3_mod)
+
+set.seed(100)
+rf3_wf %>% 
+  fit_resamples(resamples = alz_folds) %>% 
+  collect_metrics()
+
+# second one!
+rf8_wf <- rf_wf %>% 
+  update_model(rf8_mod)
+
+set.seed(100)
+rf8_wf %>% 
+  fit_resamples(resamples = alz_folds) %>% 
+  collect_metrics()
+
+# last one!
+rf30_wf <- rf_wf %>% 
+  update_model(rf30_mod)
+
+set.seed(100)
+rf30_wf %>% 
+  fit_resamples(resamples = alz_folds) %>% 
+  collect_metrics()
+```
+
+# Your Turn 4
 
 Edit the random forest model to tune the `mtry` and `min_n` hyper-parameters; call the new model spec `rf_tuner`.
 
@@ -133,7 +186,7 @@ rf_mod <-
 
 rf_wf <-
   workflow() %>% 
-  add_recipe(alz_rec) %>% 
+  add_formula(Class ~ .) %>% 
   add_model(rf_mod)
 
 set.seed(100) # Important!
@@ -141,12 +194,14 @@ rf_results <-
   rf_wf %>% 
   fit_resamples(resamples = alz_folds,
                 metrics = metric_set(roc_auc),
+                # change me to control_grid(verbose = TRUE) with tune_grid
                 control = control_resamples(verbose = TRUE))
 
 rf_results %>% 
   collect_metrics()
 ```
 
+Answer:
 ```{r}
 rf_tuner <- 
   rand_forest(mtry = tune(),
@@ -155,14 +210,16 @@ rf_tuner <-
   set_mode("classification")
 
 rf_wf <-
-  alzrec_wf %>% 
-    update_model(rf_tuner)
+  workflow() %>% 
+  add_formula(Class ~ .) %>% 
+  add_model(rf_tuner)
 
 set.seed(100) # Important!
 rf_results <-
   rf_wf %>% 
   tune_grid(resamples = alz_folds,
             metrics = metric_set(roc_auc),
+            # change me to control_grid(verbose = TRUE) with tune_grid
             control = control_grid(verbose = TRUE))
 
 rf_results %>% 
@@ -170,41 +227,45 @@ rf_results %>%
 ```
 
 
-# Your Turn 4
+# Your Turn 5
 
-Make a new model spec called `treebag_imp_spec` to fit a bagged classification tree model. Set the variable `importance` mode to "permutation". Plot the variable importance- which variable was the most important?
+Use `select_best()`, `finalize_workflow()`, and `last_fit()` to take the best combination of hyper-parameters from `rf_results` and use them to predict the test set.
 
+How does our actual test ROC AUC compare to our cross-validated estimate?
+
+```{r results='hide'}
+alz_best <-
+  rf_results %>% 
+  _____(metric = "roc_auc")
+
+last_rf_workflow <- 
+  rf_wf%>%
+  _____(alz_best) 
+
+last_rf_fit <-
+  last_rf_workflow %>% 
+  _____(split = alz_split)
+
+last_rf_fit %>% 
+  collect_metrics()
+```
+
+Answer: 
 ```{r}
-rf_best <-
+alz_best <-
   rf_results %>% 
   select_best(metric = "roc_auc")
 
-rf_best
+last_rf_workflow <- 
+  rf_wf%>%
+  finalize_workflow(alz_best) 
 
-final_mod <-
-  rand_forest(mtry = 43, min_n = 20) %>% 
-  set_engine("ranger", importance = 'permutation') %>% 
-  set_mode("classification")
-
-final_wf <-
-  rf_wf %>% 
-  update_model(final_mod)
-```
-
-# Your Turn 5
-
-```{r}
-imp_fit <- 
-  final_wf %>% 
+last_rf_fit <-
+  last_rf_workflow %>% 
   last_fit(split = alz_split)
 
-imp_fit %>% 
+last_rf_fit %>% 
   collect_metrics()
-
-imp_fit %>% 
-  pluck(".workflow", 1) %>% 
-  pull_workflow_fit() %>% 
-  vip::vip(num_features = 15, geom = "point")
 ```
 
 
