--- a/slides/rmed03-tune.Rmd
+++ b/slides/rmed03-tune.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Tune models"
+title: "Tune better models"
 subtitle: "Tidymodels, virtually"
 session: 03
 author: Alison Hill
@@ -29,7 +29,7 @@ knitr::opts_chunk$set(comment = "#",
                       collapse = TRUE,
                       fig.retina = 3,
                       fig.align = 'center',
-                      fig.path = "figs/rmed03-tune-trees/",
+                      fig.path = "figs/rmed03-tune/",
                       R.options = list(tibble.max_extra_cols=5, 
                                        tibble.print_max=5, 
                                        tibble.width=60))
