--- a/slides/rmed02-workflows.Rmd
+++ b/slides/rmed02-workflows.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Build better modeling workflows"
+title: "Build better workflows"
 subtitle: "Tidymodels, virtually"
 session: 02
 author: Alison Hill
